index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
 </head>
 <body>
 
-    <div class="header-container">
-        <div class="logo">
-        <a class="moritz" href="/about" title="ABOUT ME">Mritz Gauss</a>
-        <a href="/studio/">(Studio)</a>
-        </div>
+<div class="header-container">
+  <div class="logo">
+    <a class="moritz" href="/about" title="ABOUT ME">Mritz Gauss</a>
+
+    <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
+      <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo">
+    </a>
+
+    <a href="/studio/">(Studio)</a>
+  </div>
         
         <nav>
             <a href="/" class="nav active">Web</a>
@@ -149,10 +154,10 @@
                      <div class="info">
                          <h2>Work in Progress (2025)</h2>
                          <p>Food Art & Design Course at HfG Offenbach together with <a href="https://www.instagram.com/tamarapesi/" target="_blank">Tamara Pešić</a> from a pinch of salt studio.</p>
-                                                 <a href="https://beach.mori77z.de/frkchain" target="_blank">beach.mori77z.de/frkchain</a>
+                                                 <a href="https://beach.mori77z.de/forkchain.wave" target="_blank">beach.mori77z.de/forkchain.wave</a>
                      </div>
                      <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/frkchain"></iframe>
+                         <iframe src="https://beach.mori77z.de/forkchain.wave"></iframe>
                         </div>
                      </div>
              </div>
@@ -369,10 +374,10 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Gomorrha Landing Page (2024)</h2>
-                         <a href="https://beach.mori77z.de/gomorrha/" target="_blank">beach.mori77z.de/gomorrha</a>
+                         <a href="https://beach.mori77z.de/gomorrha.wave/" target="_blank">beach.mori77z.de/gomorrha</a>
                      </div>
                      <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/gomorrha/"></iframe>
+                         <iframe src="https://beach.mori77z.de/gomorrha.wave/"></iframe>
                      </div>
                  </div>
                    <div class="scroll-box">
@@ -414,7 +419,7 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>My (this) Website (2024)</h2>
-                   <p>Fully Code. Updated Dynamically with CMS.</p></div>
+                   <p>Fully Code. Updated dynamically.</p></div>
                      <div class="img-container">
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/myweb1-copyright-moritzgauss.png" title="CLICK TO ZOOM" alt="My Web 1">
                         </div>
@@ -452,9 +457,9 @@
                      <div class="info">
                          <h2>Student ID Generator (2024)</h2>
                         <p>Get yourself reduced entrance fees in museums and cinemas. </p>
-                        <a href="https://beach.mori77z.de/ermaessigt" target="_blank">beach.mori77z.de/ermaessigt</a></div>
+                        <a href="https://beach.mori77z.de/ermaessigt.wave" target="_blank">beach.mori77z.de/ermaessigt</a></div>
                      <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/ermaessigt"></iframe>
+                         <iframe src="https://beach.mori77z.de/ermaessigt.wave"></iframe>
                      </div>
                  </div>
              </div>
