--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="scroll-box">
       <div class="info">
         <h2>Reconnecting With Nature (2025)</h2>
-        <p>Series of objects and Web visualization of scanned nature</p>
+        <p>Series of objects and Web visualization of scanned stones.</p>
         <a href="https://beach.mori77z.de/stein.com" target="_blank">beach.mori77z.de/stein.com</a>
       </div>
       <div class="img-container">
@@ -143,9 +143,6 @@
     </div>
   </div>
 
-  <div class="discr-container">
-    <p>Objects are not functional and only barely changed from their natural shape. Stone scanned on mobile phone and imported into the web via three.js.</p>
-  </div>
 </div>
 
              <div class="combined-container" id="foodart">
