index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <div class="logo">
     <a class="moritz" href="/about" title="ABOUT ME">Mritz Gauss</a>
 
-    <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
-      <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo">
-    </a>
+<a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
+  <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
+  <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
+</a>
 
     <a href="/studio/">(Studio)</a>
   </div>
