index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
+        <video controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/6140c68760694bf48b20ab6bd8cf5e94.MOV" type="video/quicktime">
         </video>
       </div>
@@ -73,7 +73,7 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
+        <video controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/lightningaddon.mov" type="video/quicktime">
         </video>
       </div>
@@ -124,7 +124,7 @@
     <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video autoplay controls playsinline>
+        <video controls playsinline>
           <source src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_2193.mov" type="video/quicktime">
         </video>
       </div>
