index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                  </div>
              </div>
              <div class="discr-container">
-                 <p>Simple Website styling with CSS, Javascript Algorithm creating numerous variations. Creating endless Typographic Logos for letzers.
+                 <p>Algorithm creating numerous variations of different fonts, border widths and kerning.
                  </p>
              </div>
          </div>
@@ -151,7 +151,7 @@
              <div class="content">
                  <div class="scroll-box">
                      <div class="info">
-                         <h2>Autumn Pattern Generator (2024)</h2>
+                         <h2>Pattern Generator (2024)</h2>
                          <a href="https:///beach.mori77z.de/autumnscarfgenerator">beach.mori77z.de/autumnscarfgenerator</a>
                      </div>
                      <div class="iframe-container">
