index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                          <a href="https://beach.mori77z.de/logo-generator-fonts" target="_blank">beach.mori77z/logo-generator-fonts</a>
                      </div>
                      <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/logo-generator-fonts" title="Logo Font Generator"></iframe>
+                         <iframe src="https://beach.mori77z.de/fontplayground.wave" title="Logo Font Generator"></iframe>
                         </div>
                  </div>
                  <div class="scroll-box">
