index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                  <div class="scroll-box">
                      <div class="info">
                          <h2>Typographic Logo Generator (2024)</h2>
-                         <a href="https://beach.mori77z.de/fontplayground.wave" target="_blank">beach.mori77z/logo-generator-fonts</a>
+                         <a href="https://beach.mori77z.de/fontplayground.wave" target="_blank">beach.mori77z/fontplayground.wave</a>
                      </div>
                      <div class="iframe-container">
                          <iframe src="https://beach.mori77z.de/fontplayground.wave" title="Logo Font Generator"></iframe>
