index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -108,29 +108,14 @@
                          <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo1-copyright-moritzgauss.jpeg" alt="Pattern 1">
                      </div>
                  </div>
-                 <div class="scroll-box">
-                     <div class="info"></div>
-                     <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo2-copyright-moritzgauss.png" alt="Pattern 2">
-                     </div>
-                 </div>
-                 <div class="scroll-box">
-                     <div class="info"></div>
-                     <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo3-copyright-moritzgauss.png" alt="Pattern 3">
-                     </div>
-                 </div>
-                 <div class="scroll-box">
-                     <div class="info"></div>
-                     <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo4-copyright-moritzgauss.png" alt="Pattern 4">
-                     </div>
-                 </div>
-                      <div class="scroll-box">
-                     <div class="info"></div>
-                     <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/logo5-copyright-moritzgauss.png" alt="Pattern 5">
-                     </div>
+                
+  <div class="scroll-box">
+      <div class="info"></div>
+      <div class="img-container">
+        <video controls playsinline>
+          <source src="https://raw.githubusercontent.com/moritzgauss/fontplayground.wave/refs/heads/main/Video1.mov" type="video/quicktime">
+        </video>
+    </div>
                  </div>
              </div>
      
