--- a/index.html
+++ b/index.html
@@ -40,6 +40,61 @@
  
         <div class="main-container">
 
+                        <div class="combined-container" id="sanzo-wada">
+             <div class="content">
+                 <div class="scroll-box">
+                     <div class="info">
+                         <h2>Sanzo Wada Colors & Combination (2025)</h2>
+                         <a href="https://moritzgauss.github.io/sanzowada" target="_blank">moritzgauss.github.io/sanzowada</a>
+                     </div>
+                     <div class="iframe-container">
+                         <iframe src="https://moritzgauss.github.io/sanzowada" title="website"></iframe>
+                     </div>
+                 </div>
+                      <div class="scroll-box">
+                         <div class="info"></div>
+                                 <div class="iframe-container">
+                         <iframe src="https://moritzgauss.github.io/sanzowada/combinations" title="archive"></iframe>
+                     </div>
+                    </div>
+                 <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_3089.jpeg" title="CLICK TO ZOOM" alt="R2S 1">
+                        </div>
+                 </div>
+                 <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_3119.jpg" title="CLICK TO ZOOM" alt="R2S 2">
+                        </div>
+                 </div>
+                 <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_3122.jpg" title="CLICK TO ZOOM" alt="R2S 3">
+                        </div>
+                 </div>
+                    <div class="scroll-box">
+                     <div class="info"></div>
+                     <div class="img-container">
+                         <img src="https://raw.githubusercontent.com/mori77z/library/refs/heads/main/IMG_3123.jpg" title="CLICK TO ZOOM" alt="R2S 3">
+                        </div>
+                 </div>
+             </div>
+     
+             <div class="arrows-wrapper">
+                 <div class="arrows">
+                     <span class="arrow arrow_left">←</span>
+                     <span class="arrow arrow_right">→</span>
+                 </div>
+             </div>
+             <div class="discr-container">
+                 <p>The screenshots of the Website show how the style developed over time.
+                 </p>
+             </div>
+         </div>   
+
         <div class="combined-container" id="foodart">
              <div class="content">
                  <div class="scroll-box">
@@ -112,9 +167,7 @@
   <div class="scroll-box">
       <div class="info"></div>
       <div class="img-container">
-        <video controls playsinline>
-          <source src="https://raw.githubusercontent.com/moritzgauss/fontplayground.wave/refs/heads/main/Video1.mov" type="video/quicktime">
-        </video>
+          <img src="https://raw.githubusercontent.com/moritzgauss/fontplayground.wave/refs/heads/main/Video1.mov">
     </div>
                  </div>
              </div>
