--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>HOme</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Trocchi&display=swap" rel="stylesheet">
 </head>
@@ -27,14 +27,14 @@
   <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
 </a>
 
-    <a href="/studio/">(Studio)</a>
+    <a href="/studio/">(STudio)</a>
   </div>
         
         <nav>
-            <a href="/" class="nav active">Web</a>
-            <a href="/creative" class="nav">Creative</a>
-            <a href="/objects" class="nav">Objects</a>
-            <a href="/concepts" class="nav">Concepts</a>
+            <a href="/" class="nav active">WEb</a>
+            <a href="/creative" class="nav">CReative</a>
+            <a href="/objects" class="nav">OBjects</a>
+            <a href="/concepts" class="nav">COncepts</a>
         </nav>
         </div>
  
