index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
 </a>
 
-    <a href="/studio/">(STudio)</a>
+    <a href="/studio/">(Studio)</a>
   </div>
         
         <nav>
-            <a href="/" class="nav active">WEb</a>
-            <a href="/creative" class="nav">CReative</a>
-            <a href="/objects" class="nav">OBjects</a>
-            <a href="/concepts" class="nav">COncepts</a>
+            <a href="/" class="nav active">Web</a>
+            <a href="/creative" class="nav">Creative</a>
+            <a href="/objects" class="nav">Objects</a>
+            <a href="/concepts" class="nav">Concepts</a>
         </nav>
         </div>
  
