--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOme</title>
+    <title>Moritz Gauss - Home</title>
+    <meta name="description" content="digital artist and designer - my personal portfolio site">
+    <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="banner.png">  
+    <style>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Trocchi&display=swap" rel="stylesheet">
 </head>
@@ -27,7 +33,7 @@
   <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
 </a>
 
-    <a href="/studio/">(Studio)</a>
+    <a href="/studio/">Studio</a>
   </div>
         
         <nav>
