index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="header-container">
   <div class="logo">
-    <a class="moritz" href="/about" title="ABOUT ME">Mritz Gauss</a>
+    <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
 
 <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
   <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
