index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
 
 <div class="header-container">
   <div class="logo">
-    <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
+    <div class="logo-title">
+      <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
+      <h2 class="subtitle">Digital Artist & Designer</h2>
+    </div>
 
-<a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
-  <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
-  <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
-</a>
+    <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
+      <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
+      <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
+    </a>
 
     <a href="/studio/">Studio</a>
   </div>
+</div>
         
         <nav>
             <a href="/" class="nav active">Web</a>
