index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
 <body>
 
 
-<div class="header-container">
+<header class="header-container">
   <div class="logo">
-    <div class="logo-title">
       <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
       <h2 class="subtitle">Digital Artist & Designer</h2>
-    </div>
 
     <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
       <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
@@ -38,7 +36,6 @@
 
     <a href="/studio/">Studio</a>
   </div>
-</div>
         
         <nav>
             <a href="/" class="nav active">Web</a>
@@ -46,7 +43,7 @@
             <a href="/objects" class="nav">Objects</a>
             <a href="/concepts" class="nav">Concepts</a>
         </nav>
-        </div>
+        </header>
  
         <div class="main-container">
 
