--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
 <header class="header-container">
   <div class="logo">
+    <div class="logo-title"
       <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
       <h2 class="subtitle">Digital Artist & Designer</h2>
-
+    </div>
     <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
       <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
       <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
