index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -25,26 +25,19 @@
 
 
 <header class="header-container">
-<div class="logo">
-  <div class="logo-title">
-    <a class="moritz" href="/about" title="ABOUT ME">Moritz Gauss</a>
-    <h2 class="subtitle">Digital Artist & Designer</h2>
-  </div>
+    <div class="logo">
+        <a class="moritz" href="/about">Moritz Gauss</a>
+        <a href="/studio/">Studio</a>
+    </div>
 
-  <a href="https://beach.mori77z.de" class="logo-image" title="BEACH">
-    <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo.png" alt="BEACH Logo" class="logo-light">
-    <img src="https://raw.githubusercontent.com/moritzgauss/archive/refs/heads/main/beachlogo-white.png" alt="BEACH Logo White" class="logo-dark">
-  </a>
+    <h2 class="subtitle">digital artist and designer</h2>
 
-  <a href="/studio/">Studio</a>
-</div>
-        
-  <nav>
-    <a href="/" class="nav active">Web</a>
-    <a href="/creative" class="nav">Creative</a>
-    <a href="/objects" class="nav">Objects</a>
-    <a href="/concepts" class="nav">Concepts</a>
-  </nav>
+    <nav>
+        <a href="/" class="nav">Web</a>
+        <a href="/creative" class="nav">Creative</a>
+        <a href="/objects" class="nav">Objects</a>
+        <a href="/concepts" class="nav active">Concepts</a>
+    </nav>
 </header>
  
         <div class="main-container">
