--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <a href="/studio/">Studio</a>
     </div>
 
-    <h2 class="subtitle">digital artist and designer</h2>
+    <h1 class="subtitle">digital artist and designer</h1>
 
     <nav>
-        <a href="/" class="nav">Web</a>
+        <a href="/" class="nav active">Web</a>
         <a href="/creative" class="nav">Creative</a>
         <a href="/objects" class="nav">Objects</a>
-        <a href="/concepts" class="nav active">Concepts</a>
+        <a href="/concepts" class="nav">Concepts</a>
     </nav>
 </header>
  
