--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moritz Gauss - Home</title>
+    <title>Moritz Gauss - Webworks</title>
     <meta name="description" content="digital artist and designer - my personal portfolio site">
     <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -92,7 +92,10 @@
                  </div>
              </div>
              <div class="discr-container">
-                 <p>The screenshots of the Website show how the style developed over time.
+<p>
+  Sanzo Wada Dots & Download — 157 colors from <em>A Dictionary of Color Combinations</em> made digital. 
+together with <a href="https://www.instagram.com/martin_keziah_vella" target="_blank">@martin_keziah_vella</a>.
+</p>
                  </p>
              </div>
          </div>   
