index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -470,8 +470,9 @@ together with <a href="https://www.instagram.com/martin_keziah_vella" target="_b
                  <div class="scroll-box">
                      <div class="info"></div>
                      <div class="img-container">
-                         <img src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s3-copyright-moritzgauss.MOV" title="CLICK TO ZOOM" alt="R2S 3">
-
+                    <video autoplay muted loop>
+                         <source src="https://raw.githubusercontent.com/mori77z/material/refs/heads/main/r2s3-copyright-moritzgauss.MOV" type="video/quicktime" title="CLICK TO ZOOM" alt="R2S 3">
+                    </video>
                         </div>
                  </div>
              </div>
