index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                          <h2>Sanzo Wada Colors & Combination (2025)</h2>
                          <a href="https://moritzgauss.github.io/sanzowada" target="_blank">moritzgauss.github.io/sanzowada</a>
                      </div>
-                     <div class="iframe-container">
-                         <iframe src="https://moritzgauss.github.io/sanzowada" title="website"></iframe>
+                     <div class="iframe-container" onclick="window.open('https://moritzgauss.github.io/sanzowada', '_blank')">
+                          <iframe src="https://moritzgauss.github.io/sanzowada"></iframe>
                      </div>
                  </div>
                       <div class="scroll-box">
                          <div class="info"></div>
-                                 <div class="iframe-container">
-                         <iframe src="https://moritzgauss.github.io/sanzowada/combinations" title="archive"></iframe>
+                     <div class="iframe-container" onclick="window.open('https://moritzgauss.github.io/sanzowada/combinations', '_blank')">
+                          <iframe src="https://moritzgauss.github.io/sanzowada/combinations"></iframe>
                      </div>
                     </div>
                  <div class="scroll-box">
@@ -108,8 +108,8 @@ together with <a href="https://www.instagram.com/martin_keziah_vella" target="_b
                          <p>Food Art & Design Course at HfG Offenbach together with <a href="https://www.instagram.com/tamarapesi/" target="_blank">Tamara Pešić</a> from a pinch of salt studio.</p>
                                                  <a href="https://beach.mori77z.de/forkchain.wave" target="_blank">beach.mori77z.de/forkchain.wave</a>
                      </div>
-                     <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/forkchain.wave"></iframe>
+                     <div class="iframe-container" onclick="window.open('https://beach.mori77z.de/forkchain.wave', '_blank')">
+                          <iframe src="https://beach.mori77z.de/forkchain.wave"></iframe>
                         </div>
                      </div>
              </div>
@@ -121,7 +121,7 @@ together with <a href="https://www.instagram.com/martin_keziah_vella" target="_b
                  </div>
              </div>
              <div class="discr-container">
-                 <p>Created with Blender and developed in Three.js. More like dis coming very soon.
+                 <p>Created with Blender and developed in Three.js.
                  </p>
              </div>
          </div>
@@ -133,8 +133,8 @@ together with <a href="https://www.instagram.com/martin_keziah_vella" target="_b
                          <h2>Online Calender Design (2025)</h2>
                          <a href="https://beach.mori77z.de/daily" target="_blank">beach.mori77z.de/daily</a>
                      </div>
-                     <div class="iframe-container">
-                         <iframe src="https://beach.mori77z.de/daily"></iframe>
+                     <div class="iframe-container" onclick="window.open('https://https://beach.mori77z.de/daily', '_blank')">
+                          <iframe src="https://beach.mori77z.de/daily"></iframe>
                         </div>
                      </div>
              </div>
