--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
                      <div class="info">
                          <h2>Sanzo Wada Colors & Combination (2025)</h2>
-                          Sanzo Wada Dots & Download — 157 colors from <em>A Dictionary of Color Combinations</em> made digital. 
-                        <p>together with <a href="https://www.instagram.com/martin_keziah_vella" target="_blank">@martin_keziah_vella</a>.</p>
+                           <p>Sanzo Wada Dots & Download — 157 colors from <em>A Dictionary of Color Combinations</em> made digital. 
+                       together with <a href="https://www.instagram.com/martin_keziah_vella" target="_blank">@martin_keziah_vella</a>.</p>
                          <a href="https://moritzgauss.github.io/sanzowada" target="_blank">moritzgauss.github.io/sanzowada</a>
                      </div>
                     
