--- a/snippets/header.html
+++ b/snippets/header.html
@@ -3,7 +3,7 @@
     body.custom-body {
       padding-bottom: 0;
       width: 100%;
-      height: auto;
+      height: 166px;
       margin: 0;
     }
 
@@ -11,6 +11,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      width: 100%;
       padding: 10px;
       gap: 10px; 
       position: fixed;
@@ -115,6 +116,7 @@
     body.custom-body {
         background-color: #000;
         color: #fff;
+        height: 100px;
     }
     .header-container {
     background-color: rgba(0, 0, 0, 0.1);
