--- a/snippets/header.html
+++ b/snippets/header.html
@@ -2,15 +2,17 @@
   <style>
     body.custom-body {
       padding-bottom: 0;
-      width: 100%;
-      height: 166px;
       margin: 0;
+      width: 100vw;
+      height: fit-content;
     }
 
     .header-container {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      width: 100%;
+    height: 166px;
       padding: 10px;
       gap: 10px; 
       position: fixed;
@@ -24,7 +26,7 @@
     .logo {
       display: flex;
       justify-content: space-between;
-      align-items: flex-end;
+      align-items: flex-start;
       padding-top: 10px;
       width: 100%;
     }
