--- a/snippets/header.html
+++ b/snippets/header.html
@@ -5,23 +5,26 @@
       margin: 0;
       width: 100vw;
       height: fit-content;
+      overflow-x: hidden;
     }
 
     .header-container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      width: 100%;
-    height: 166px;
-      padding: 10px;
-      gap: 10px; 
-      position: fixed;
-      top: 0;
-      background-color: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(5px);
-      -webkit-backdrop-filter: blur(5px);
-      z-index: 10;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+  gap: 10px;
+  position: fixed;
+  top: 0;
+  left: 0; 
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  z-index: 10;
+  width: 100%;
+  box-sizing: border-box;
+}
 
     .logo {
       display: flex;
