--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Moritz Gauss - Web</title>
     <meta name="description" content="digital artist and designer - my personal portfolio site">
     <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="/material/favicon.png">
     <link rel="shortcut icon" type="image/png" href="/material/favicon.png">
     <link rel="apple-touch-icon" href="/material/banner.png">  
     <link rel="stylesheet" href="/assets/global.css">
@@ -166,10 +166,6 @@
                      <span class="arrow arrow_left">←</span>
                      <span class="arrow arrow_right">→</span>
                  </div>
-             </div>
-             <div class="discr-container">
-                 <p>Algorithm creating numerous variations of different fonts, border widths and kerning.
-                 </p>
              </div>
          </div>
      
