--- a/snippets/header.html
+++ b/snippets/header.html
@@ -103,70 +103,4 @@
     .logo a {
         font-size: 5em;
     }
-    .logo-image img {
-        height: 72px;
-    }
-    nav a {
-    font-size: 1.6em;
-    line-height: 1.1;
-    }
-    .subtitle {
-      font-size: 1.4em;
-      margin-top: -8px;
-      }
-    }
-
-    @media (prefers-color-scheme: dark) {
-    body.custom-body {
-        background-color: #000;
-        color: #fff;
-        height: 100px;
-    }
-    .header-container {
-    background-color: rgba(0, 0, 0, 0.1);
-    }
-    
-    .logo a {
-        color: white;
-    }
-    
-    .logo-light {
-    display: none;
-    }
-    .logo-dark {
-    display: block;
-    }
-  
-    nav a {
-        color: white;
-    }
-    }
-  </style>
-
-  <div class="logo">
-    <a class="moritz" href="/about">Moritz Gauss</a>
-    <a href="/studio/">Studio</a>
-  </div>
-
-  <h1 class="subtitle">digital artist and designer</h1>
-
-  <nav>
-    <a href="/" class="nav">Web</a>
-    <a href="/creative" class="nav">Creative</a>
-    <a href="/objects" class="nav">Objects</a>
-    <a href="/concepts" class="nav">Concepts</a>
-  </nav>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const links = document.querySelectorAll("nav a");
-      const path = window.location.pathname.replace(/\/index\.html$/, "/");
-
-      links.forEach(link => {
-        if (link.getAttribute("href") === path) {
-          link.classList.add("active");
-        }
-      });
-    });
-  </script>
-</header>
+    .logo-ima
