--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -1,4 +1,21 @@
-<footer style="font-size: 1em; display: flex; justify-content: space-between; padding: 1em; border-top: 1px solid #ccc;">
+<style>
+
+.custom-footer {
+  font-size: 1em;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 14px;
+}
+
+@media (min-width: 768px) {
+  .custom-footer {
+    padding-left: 20px;
+    padding-right: 24px;
+  }
+}
+</style>
+<footer class="custom-footer">
   <div id="last-edited">Last Updated: <span id="last-edited-date"></span></div>
   <a href="/about/imprint" style="text-decoration: underline; color: inherit;">Imprint</a>
 </footer>
