--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -4,6 +4,7 @@
   font-size: 1em;
   display: flex;
   justify-content: space-between;
+  padding-top: 60px;
   padding-left: 10px;
   padding-right: 14px;
 }
