--- a/snippets/header.html
+++ b/snippets/header.html
@@ -19,6 +19,13 @@
       box-sizing: border-box;
     }
 
+    @font-face {
+      font-family: 'Snell';
+      src: url('/assets/Snell-Roundhand-Script.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
+
     .logo {
       display: flex;
       justify-content: space-between;
@@ -44,14 +51,14 @@
     }
 
     .logo a:hover {
-      font-family: "Instrument Serif", serif;
+      font-family: "Snell", serif;
       font-style: italic;
       letter-spacing: -2px;
       padding-right: 4px;
     }
 
     .subtitle {
-      font-family: "Instrument Serif", serif;
+      font-family: "IBM Plex Serif", serif;
       font-size: 0.8em;
       font-weight: 300;
       margin-top: -6px;
@@ -77,13 +84,13 @@
     }
 
     nav a:hover {
-      font-family: "Instrument Serif", serif;
+      font-family: "Snell", serif;
       font-style: italic;
       padding-right: 4px;
     }
 
     nav a.active {
-      font-family: "Instrument Serif", serif;
+      font-family: "IBM Plex Serif", serif;
       font-style: italic;
       text-decoration: underline; 
       padding-right: 4px;
