--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -9,7 +9,7 @@
   padding-right: 14px;
 }
 .last-edited {
-  font-family: "Instrument Serif", serif;
+  font-family: "IBM Plex Mono", monospace;
   }
   
 .custom-footer a {
@@ -21,7 +21,7 @@
   }
 
 .custom-footer a:hover {
-  font-family: "Instrument Serif", serif;
+  font-family: "IBM Plex Serif", serif;
   font-style: italic;
   padding-right: 3px;
   }
