--- a/snippets/header.html
+++ b/snippets/header.html
@@ -60,7 +60,7 @@
     .subtitle {
       font-family: "IBM Plex Serif", serif;
       font-size: 0.8em;
-      font-weight: 300;
+      font-weight: 400;
       margin-top: -6px;
       margin-bottom: 0;
       text-align: left;
@@ -86,12 +86,14 @@
     nav a:hover {
       font-family: "Snell", serif;
       font-style: italic;
+      font-size: 1.3em;
       padding-right: 4px;
     }
 
     nav a.active {
-      font-family: "IBM Plex Serif", serif;
+      font-family: "Snell", serif;
       font-style: italic;
+      font-size: 1.3em;
       text-decoration: underline; 
       padding-right: 4px;
     }
@@ -107,9 +109,15 @@
         height: 72px;
       }
       nav a {
-        font-size: 1.6em;
-        line-height: 1.1;
+        font-size: 2em;
       }
+          nav a:hover {
+      font-size: 2.1em;
+    }
+
+    nav a.active {
+      font-size: 2.1em;
+    }
       .subtitle {
         font-size: 1.4em;
         margin-top: -8px;
