--- a/snippets/header.html
+++ b/snippets/header.html
@@ -60,7 +60,7 @@
     .subtitle {
       font-family: "IBM Plex Serif", serif;
       font-size: 0.8em;
-      font-weight: 400;
+      font-weight: 300;
       margin-top: -6px;
       margin-bottom: 0;
       text-align: left;
@@ -78,6 +78,7 @@
     nav a {
       font-size: 1.2em;
       line-height: 1.1;
+      letter-spacing: -0.03em;
       text-decoration: underline;
       color: black;
       cursor: pointer;
@@ -87,6 +88,7 @@
       font-family: "Snell", serif;
       font-style: italic;
       font-size: 1.3em;
+      letter-spacing: 0;
       padding-right: 4px;
     }
 
@@ -94,6 +96,7 @@
       font-family: "Snell", serif;
       font-style: italic;
       font-size: 1.3em;
+      letter-spacing: 0;
       text-decoration: underline; 
       padding-right: 4px;
     }
