--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -17,7 +17,7 @@
   color: black;
   font-size: 1em;
   text-decoration: underline;
-  letter-spacing: -0.05;
+  letter-spacing: -0.05em;
   }
 
 .custom-footer a:hover {
