--- a/snippets/header.html
+++ b/snippets/header.html
@@ -61,6 +61,7 @@
       font-family: "IBM Plex Serif", serif;
       font-size: 0.8em;
       font-weight: 300;
+      letter-spacing: -0.02em;
       margin-top: -6px;
       margin-bottom: 0;
       text-align: left;
