--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Moritz Gauss - Home</title>
     <meta name="description" content="digital artist and designer - my personal portfolio site">
     <meta name="keywords" content="digital design, webdesign, digital artist, Moritz Gauss, creative coding, designer berlin, design, frontend development, developer">
-    <link rel="icon" type="image/png" href="/material/favicon.png">
+    <link id="favicon" rel="icon" type="image/png" href="/material/favicon1.png">
     <link rel="shortcut icon" type="image/png" href="/material/favicon.png">
     <link rel="apple-touch-icon" href="/material/banner.png">  
     <link rel="stylesheet" href="/assets/global.css">
@@ -481,8 +481,8 @@
          <img class="zoomed-image" src="" alt="Zoomed Image">
      </div>
 
-     
          <script src="/assets/global.js"></script>
+         <script src="/material/favicon.js"></script>   
      </body>
      </html>
      
