--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -3,6 +3,7 @@
 .custom-footer {
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
   padding-top: 60px;
   padding-left: 10px;
   padding-right: 14px;
