index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                     
                      <div class="content">
                             <div class="scroll-box">
-                       <div class="iframe-container" data-href="https://moritzgauss.github.io/wavegang">
-                           <iframe src="https://moritzgauss.github.io/wavegang"></iframe>
+                       <div class="iframe-container" data-href="https://r2s.education/wavegang/">
+                           <iframe src="https://r2s.education/wavegang/"></iframe>
                        </div>
              </div>
            </div>
