--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -12,8 +12,7 @@
   font-size: 0.6em;
   font-weight: 300;
   letter-spacing: -0.02em;
-  font-family: "IBM Plex Mono", monospace;
-  }
+}
   
 .custom-footer a {
   color: black;
@@ -23,7 +22,7 @@
   }
 
 .custom-footer a:hover {
-  font-family: "IBM Plex Serif", serif;
+  font-family: "Snell", serif;
   font-style: italic;
   padding-right: 3px;
   }
