--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -7,6 +7,8 @@
   padding-top: 60px;
   padding-left: 10px;
   padding-right: 14px;
+  width: 100%;
+  height: 100px;
 }
 .last-edited {
   font-size: 0.6em;
