footer.html aktualisieren

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -37,12 +37,12 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
 
   .custom-footer a {
     color: #fff;
   }
-}
+} */
 
 </style>
 <footer class="custom-footer">
