--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,7 +11,7 @@
       top: 0;
       left: 0;
       right: 0;
-      background-color: rgba(255, 255, 255, 0.1);
+      /*background-color: rgba(255, 255, 255, 0.1);*/
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
       z-index: 10;
@@ -42,7 +42,7 @@
       font-size: 2em;
       font-weight: normal;
       line-height: 1;
-      color: black;
+      /*color: black;*/
       letter-spacing: -0.075em;
       white-space: nowrap;
       box-sizing: border-box; 
@@ -80,7 +80,7 @@
       line-height: 1.1;
       letter-spacing: -0.03em;
       text-decoration: underline;
-      color: black;
+      /*color: black;*/
       cursor: pointer;
     }
 
@@ -127,10 +127,10 @@
       }
     }
 
-    @media (prefers-color-scheme: dark) {
+    /* @media (prefers-color-scheme: dark) { */
 
       .header-container {
-        background-color: rgba(0, 0, 0, 0.1);
+        background-color: rgba(0, 0, 0, 0.2);
       }
 
       .logo a {
@@ -147,7 +147,7 @@
       nav a {
         color: white;
       }
-    }
+    
   </style>
 
   <div class="logo">
