header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -136,6 +136,9 @@
       .logo a {
         color: white;
       }
+      .subtitle {
+        color: white;
+      }
 
       .logo-light {
         display: none;
