header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -42,7 +42,7 @@
       font-size: 2em;
       font-weight: normal;
       line-height: 1;
-      color: #ddd;
+      color: #727273;
       letter-spacing: -0.075em;
       white-space: nowrap;
       box-sizing: border-box; 
@@ -61,6 +61,7 @@
       font-size: 0.8em;
       font-weight: 300;
       letter-spacing: -0.02em;
+      color: #727273;
       margin-top: -6px;
       margin-bottom: 0;
       text-align: left;
@@ -80,7 +81,7 @@
       line-height: 1.1;
       letter-spacing: -0.03em;
       text-decoration: underline;
-      color: #ddd;
+      color: #727273;
       cursor: pointer;
     }
 
