--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,7 +11,7 @@
       top: 0;
       left: 0;
       right: 0;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(221, 221, 221, 0.1);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
       z-index: 10;
@@ -37,12 +37,16 @@
     .moritz {
       display: inline-block;
     }
+    
+    .capital {
+      font-weight: 600;
+      }
 
     .logo a {
       font-size: 2em;
-      font-weight: normal;
+      font-weight: 400;
       line-height: 1;
-      color: #727273;
+      color: black;
       letter-spacing: -0.075em;
       white-space: nowrap;
       box-sizing: border-box; 
@@ -61,7 +65,7 @@
       font-size: 0.8em;
       font-weight: 300;
       letter-spacing: -0.02em;
-      color: #727273;
+      color: black;
       margin-top: -6px;
       margin-bottom: 0;
       text-align: left;
