header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -159,7 +159,7 @@
   </style>
 
   <div class="logo">
-    <a class="moritz" href="/about">Moritz Gauss</a>
+    <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
     <a href="/studio/">Studio</a>
   </div>
 
