header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -160,7 +160,7 @@
 
   <div class="logo">
     <a class="moritz" href="/about"><span class="capital">M</span>oritz Gauss</a>
-    <a href="/studio/">Studio</a>
+    <a href="/studio/"><span class="capital">S</span>tudio</a>
   </div>
 
   <h1 class="subtitle">digital artist and designer</h1>
