header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -85,7 +85,7 @@
       line-height: 1.1;
       letter-spacing: -0.03em;
       text-decoration: underline;
-      color: #727273;
+      color: black;
       cursor: pointer;
     }
 
