header.html aktualisieren

--- a/snippets/header.html
+++ b/snippets/header.html
@@ -11,7 +11,7 @@
       top: 0;
       left: 0;
       right: 0;
-      background-color: rgba(221, 221, 221, 0.1);
+      background-color: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(5px);
       -webkit-backdrop-filter: blur(5px);
       z-index: 10;
@@ -46,8 +46,8 @@
       font-size: 2em;
       font-weight: 400;
       line-height: 1;
-      color: black;
-      letter-spacing: -0.075em;
+      color: rgba(0, 0, 0, 0.4);
+      letter-spacing: -0.1em;
       white-space: nowrap;
       box-sizing: border-box; 
       text-decoration: none;
@@ -57,13 +57,14 @@
     .logo a:hover {
       font-family: "Snell", serif;
       font-style: italic;
+      font-size: 2.2em;
       letter-spacing: -2px;
       padding-right: 4px;
     }
 
     .subtitle {
       font-size: 0.8em;
-      font-weight: 300;
+      font-weight: 400;
       letter-spacing: -0.02em;
       color: black;
       margin-top: -6px;
