--- a/snippets/header.html
+++ b/snippets/header.html
@@ -114,6 +114,9 @@
       .logo a {
         font-size: 5em;
       }
+       .logo a:hover {
+      font-size: 5.2em;
+       }
       .logo-image img {
         height: 72px;
       }
